# Logiciel-de-gestions-de-logs-en-C-

./: CMakeLists.txt  Gestion_logs.cpp  README.md
Doc/: Documentation_fonction.h  Doxyfile
Logs/: log.cpp  log.h
Menu/: Menu.cpp
